# DocuSync

./: .env.example  .gitignore  DATABASE_ANALYSIS.md  Dockerfile  ELECTRON_FOLDER_PICKER.md  ENDPOINTS_GUIDE.md  FOLDER_PATH_GUIDE.md  GPT_PROMPT.md  PROJECT_DESCRIPTION_RU.md  README.md  TECHNICAL_SPECIFICATION.md  docker-compose.yml  presentation.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 5a58dbe62bea_initial_migration.py
app/: __init__.py  auth.py  cli.py  cli_reports.py  config.py  corrupted_pdf.py  database.py  file_scanner.py  main.py  migrate_db.py  reports.py  search.py  search_fts5.py  sync.py
scripts/: cleanup_db.py  init_db.py
tests/: __init__.py  conftest.py  test_api.py  test_duplicates.py  test_e2e.py  test_endpoints.py  test_file_scanner.py  test_reports.py  test_search.py  test_search_fts5.py  test_sync_frontend.py  test_utils.py
