[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docu-sync"
version = "0.1.0"
description = "Document synchronization and search tool"
authors = [{name = "DocuSync Team"}]
readme = "README.md"
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
timeout = 1800  # 30 minutes in seconds
timeout_method = "thread"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/test_*.py"]

